@@ -54,6 +54,9 @@ Library
 - Issue #12448: smtplib now flushes stdout while running ``python -m smtplib``
   in order to display the prompt correctly.
 
+- Issue #6090: zipfile raises a ValueError when a document with a timestamp
+  earlier than 1980 is provided. Patch contributed by Petri Lehtinen.
+
 - Issue #13194: zlib.compressobj().copy() and zlib.decompressobj().copy() are
   now available on Windows.
 
